<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="fields_must_not_be_empty">Fields must not be empty</string>
    <string name="email_must_not_be_empty">Email must not be empty</string>
    <string name="password_must_not_be_empty">Password must not be empty</string>
    <string name="login_error">Login Error</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="back">Back</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="passwords_doesn_t_match">Passwords doesn\'t match</string>
    <string name="register_error">Register Error</string>
    <string name="error">Error</string>
    <string name="rating">(%1$s)</string>
    <string name="movies">Movies</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="hello">Hello</string>
    <string name="genre">Genre</string>
    <string name="cast">Cast</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="your_saved_movies">Your saved movies</string>
    <string name="your_watchlist_is_empty">Your watchlist is empty</string>
</resources>